; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-xgene-slimpro.c_xgene_slimpro_i2c_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-xgene-slimpro.c_xgene_slimpro_i2c_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.slimpro_i2c_dev = type { i32, i32 }

@acpi_disabled = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @xgene_slimpro_i2c_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xgene_slimpro_i2c_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.slimpro_i2c_dev*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.slimpro_i2c_dev* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.slimpro_i2c_dev* %5, %struct.slimpro_i2c_dev** %3, align 8
  %6 = load %struct.slimpro_i2c_dev*, %struct.slimpro_i2c_dev** %3, align 8
  %7 = getelementptr inbounds %struct.slimpro_i2c_dev, %struct.slimpro_i2c_dev* %6, i32 0, i32 1
  %8 = call i32 @i2c_del_adapter(i32* %7)
  %9 = load i64, i64* @acpi_disabled, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.slimpro_i2c_dev*, %struct.slimpro_i2c_dev** %3, align 8
  %13 = getelementptr inbounds %struct.slimpro_i2c_dev, %struct.slimpro_i2c_dev* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @mbox_free_channel(i32 %14)
  br label %21

16:                                               ; preds = %1
  %17 = load %struct.slimpro_i2c_dev*, %struct.slimpro_i2c_dev** %3, align 8
  %18 = getelementptr inbounds %struct.slimpro_i2c_dev, %struct.slimpro_i2c_dev* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @pcc_mbox_free_channel(i32 %19)
  br label %21

21:                                               ; preds = %16, %11
  ret i32 0
}

declare dso_local %struct.slimpro_i2c_dev* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @i2c_del_adapter(i32*) #1

declare dso_local i32 @mbox_free_channel(i32) #1

declare dso_local i32 @pcc_mbox_free_channel(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
